--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- header -->
     <div class="container-fluid myNavBar">
         <nav class="navbar navbar-expand-md navbar-light">
-            <div class="col-6">
+            <div class="col-xl-6 col-lg-9 col-md-8 col-sm-6">
                 <div class="row">
                     <a class="navbar-brand" href="#">
                         <img src="./img/logo-coral.svg" alt="">
@@ -48,33 +48,28 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-xl-6 col-lg-3 col-md-4 col-sm-4" style="margin-top: -4px;">
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
-                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <ul class="navbar-nav">
+                        <li class="nav-item business">
+                            <a class="nav-link" href="#">Udermy for Business</a>
+                        </li>
+                        <li class="nav-item instructor">
+                            <a class="nav-link" href="#">Become an Instructor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">
+                                <i class="fa fa-shopping-cart icon-cart"></i>
+                            </a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdownId">
-                                <a class="dropdown-item" href="#">Action 1</a>
-                                <a class="dropdown-item" href="#">Action 2</a>
-                            </div>
+                        <li class="button d-flex">
+                            <button class="btn btn-white mr-1">Log In</button>
+                            <button class="btn btn-red">Sign Up</button>
                         </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
-
-
-            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
+            <button class="navbar-toggler d-lg-none col-sm-2" type="button" data-toggle="collapse"
                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
